Updated with Merge of DataFrames
This update has two extra cells of code, where we are merging the cleaned DataFrame for the US, and the cleaned DataFrame for the Rest of the World. Then, this merged DataFrame was converted into a CSV file to use for further analysis.

--- a/Final Space Mission Data.ipynb
+++ b/Final Space Mission Data.ipynb
@@ -27,6 +27,134 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "55a37e86-506f-4898-a7da-8386a8deae1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Rocket</th>\n",
+       "      <th>Mission</th>\n",
+       "      <th>RocketStatus</th>\n",
+       "      <th>MissionStatus</th>\n",
+       "      <th>Day/Night Launch</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>RVSN USSR</td>\n",
+       "      <td>Site 1/5, Baikonur Cosmodrome, Kazakhstan</td>\n",
+       "      <td>1957-10-04</td>\n",
+       "      <td>19:28:00</td>\n",
+       "      <td>Sputnik 8K71PS</td>\n",
+       "      <td>Sputnik-1</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>Success</td>\n",
+       "      <td>Night</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>RVSN USSR</td>\n",
+       "      <td>Site 1/5, Baikonur Cosmodrome, Kazakhstan</td>\n",
+       "      <td>1957-11-03</td>\n",
+       "      <td>02:30:00</td>\n",
+       "      <td>Sputnik 8K71PS</td>\n",
+       "      <td>Sputnik-2</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>Success</td>\n",
+       "      <td>Night</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>US Navy</td>\n",
+       "      <td>LC-18A, Cape Canaveral AFS, Florida, USA</td>\n",
+       "      <td>1957-12-06</td>\n",
+       "      <td>16:44:00</td>\n",
+       "      <td>Vanguard</td>\n",
+       "      <td>Vanguard TV3</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>Failure</td>\n",
+       "      <td>Day</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AMBA</td>\n",
+       "      <td>LC-26A, Cape Canaveral AFS, Florida, USA</td>\n",
+       "      <td>1958-02-01</td>\n",
+       "      <td>03:48:00</td>\n",
+       "      <td>Juno I</td>\n",
+       "      <td>Explorer 1</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>Success</td>\n",
+       "      <td>Night</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>US Navy</td>\n",
+       "      <td>LC-18A, Cape Canaveral AFS, Florida, USA</td>\n",
+       "      <td>1958-02-05</td>\n",
+       "      <td>07:33:00</td>\n",
+       "      <td>Vanguard</td>\n",
+       "      <td>Vanguard TV3BU</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>Failure</td>\n",
+       "      <td>Day</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Company                                   Location        Date      Time  \\\n",
+       "0  RVSN USSR  Site 1/5, Baikonur Cosmodrome, Kazakhstan  1957-10-04  19:28:00   \n",
+       "1  RVSN USSR  Site 1/5, Baikonur Cosmodrome, Kazakhstan  1957-11-03  02:30:00   \n",
+       "2    US Navy   LC-18A, Cape Canaveral AFS, Florida, USA  1957-12-06  16:44:00   \n",
+       "3       AMBA   LC-26A, Cape Canaveral AFS, Florida, USA  1958-02-01  03:48:00   \n",
+       "4    US Navy   LC-18A, Cape Canaveral AFS, Florida, USA  1958-02-05  07:33:00   \n",
+       "\n",
+       "           Rocket         Mission RocketStatus MissionStatus Day/Night Launch  \n",
+       "0  Sputnik 8K71PS       Sputnik-1      Retired       Success            Night  \n",
+       "1  Sputnik 8K71PS       Sputnik-2      Retired       Success            Night  \n",
+       "2        Vanguard    Vanguard TV3      Retired       Failure              Day  \n",
+       "3          Juno I      Explorer 1      Retired       Success            Night  \n",
+       "4        Vanguard  Vanguard TV3BU      Retired       Failure              Day  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "space_missions_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "ba61bc70",
    "metadata": {},
    "outputs": [
@@ -243,7 +371,7 @@
        "[1472 rows x 9 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d0eb8731",
    "metadata": {},
    "outputs": [
@@ -511,7 +639,7 @@
        "[1472 rows x 12 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "fafe862c",
    "metadata": {},
    "outputs": [
@@ -749,7 +877,7 @@
        "[3158 rows x 9 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d2706e5b",
    "metadata": {},
    "outputs": [
@@ -1002,7 +1130,7 @@
        "[3158 rows x 11 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,16 +1151,291 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "fba7da5c",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Rocket</th>\n",
+       "      <th>Mission</th>\n",
+       "      <th>RocketStatus</th>\n",
+       "      <th>MissionStatus</th>\n",
+       "      <th>Day/Night Launch</th>\n",
+       "      <th>Complex ID</th>\n",
+       "      <th>Launch Site</th>\n",
+       "      <th>Territory</th>\n",
+       "      <th>Country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>US Navy</td>\n",
+       "      <td>1957-12-06</td>\n",
+       "      <td>16:44:00</td>\n",
+       "      <td>Vanguard</td>\n",
+       "      <td>Vanguard TV3</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>Failure</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>LC-18A</td>\n",
+       "      <td>Cape Canaveral AFS</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>USA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AMBA</td>\n",
+       "      <td>1958-02-01</td>\n",
+       "      <td>03:48:00</td>\n",
+       "      <td>Juno I</td>\n",
+       "      <td>Explorer 1</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>Success</td>\n",
+       "      <td>Night</td>\n",
+       "      <td>LC-26A</td>\n",
+       "      <td>Cape Canaveral AFS</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>USA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>US Navy</td>\n",
+       "      <td>1958-02-05</td>\n",
+       "      <td>07:33:00</td>\n",
+       "      <td>Vanguard</td>\n",
+       "      <td>Vanguard TV3BU</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>Failure</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>LC-18A</td>\n",
+       "      <td>Cape Canaveral AFS</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>USA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AMBA</td>\n",
+       "      <td>1958-03-05</td>\n",
+       "      <td>18:27:00</td>\n",
+       "      <td>Juno I</td>\n",
+       "      <td>Explorer 2</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>Failure</td>\n",
+       "      <td>Night</td>\n",
+       "      <td>LC-26A</td>\n",
+       "      <td>Cape Canaveral AFS</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>USA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>US Navy</td>\n",
+       "      <td>1958-03-17</td>\n",
+       "      <td>12:15:00</td>\n",
+       "      <td>Vanguard</td>\n",
+       "      <td>Vanguard 1</td>\n",
+       "      <td>Retired</td>\n",
+       "      <td>Success</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>LC-18A</td>\n",
+       "      <td>Cape Canaveral AFS</td>\n",
+       "      <td>Florida</td>\n",
+       "      <td>USA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4625</th>\n",
+       "      <td>ESA</td>\n",
+       "      <td>2022-07-13</td>\n",
+       "      <td>13:13:00</td>\n",
+       "      <td>Vega C</td>\n",
+       "      <td>LARES 2 &amp; Cubesats</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Success</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>ELV-1</td>\n",
+       "      <td>Guiana Space Centre - French Guiana</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4626</th>\n",
+       "      <td>CASC</td>\n",
+       "      <td>2022-07-15</td>\n",
+       "      <td>22:57:00</td>\n",
+       "      <td>Long March 2C</td>\n",
+       "      <td>SuperView Neo 2-01 &amp; 02</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Success</td>\n",
+       "      <td>Night</td>\n",
+       "      <td>LC-9</td>\n",
+       "      <td>Taiyuan Satellite Launch Center</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>China</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4627</th>\n",
+       "      <td>CASC</td>\n",
+       "      <td>2022-07-24</td>\n",
+       "      <td>06:22:00</td>\n",
+       "      <td>Long March 5B</td>\n",
+       "      <td>Wentian</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Success</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>LC-101</td>\n",
+       "      <td>Wenchang Satellite Launch Center</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>China</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4628</th>\n",
+       "      <td>CAS Space</td>\n",
+       "      <td>2022-07-27</td>\n",
+       "      <td>04:12:00</td>\n",
+       "      <td>Zhongke-1A</td>\n",
+       "      <td>Demo Flight</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Success</td>\n",
+       "      <td>Night</td>\n",
+       "      <td></td>\n",
+       "      <td>Jiuquan Satellite Launch Center</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>China</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4629</th>\n",
+       "      <td>CASC</td>\n",
+       "      <td>2022-07-29</td>\n",
+       "      <td>13:28:00</td>\n",
+       "      <td>Long March 2D</td>\n",
+       "      <td>Yaogan 35 Group 03</td>\n",
+       "      <td>Active</td>\n",
+       "      <td>Success</td>\n",
+       "      <td>Day</td>\n",
+       "      <td>LC-3</td>\n",
+       "      <td>Xichang Satellite Launch Center</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>China</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4630 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Company        Date      Time         Rocket                  Mission  \\\n",
+       "0       US Navy  1957-12-06  16:44:00       Vanguard             Vanguard TV3   \n",
+       "1          AMBA  1958-02-01  03:48:00         Juno I               Explorer 1   \n",
+       "2       US Navy  1958-02-05  07:33:00       Vanguard           Vanguard TV3BU   \n",
+       "3          AMBA  1958-03-05  18:27:00         Juno I               Explorer 2   \n",
+       "4       US Navy  1958-03-17  12:15:00       Vanguard               Vanguard 1   \n",
+       "...         ...         ...       ...            ...                      ...   \n",
+       "4625        ESA  2022-07-13  13:13:00         Vega C       LARES 2 & Cubesats   \n",
+       "4626       CASC  2022-07-15  22:57:00  Long March 2C  SuperView Neo 2-01 & 02   \n",
+       "4627       CASC  2022-07-24  06:22:00  Long March 5B                  Wentian   \n",
+       "4628  CAS Space  2022-07-27  04:12:00     Zhongke-1A              Demo Flight   \n",
+       "4629       CASC  2022-07-29  13:28:00  Long March 2D       Yaogan 35 Group 03   \n",
+       "\n",
+       "     RocketStatus MissionStatus Day/Night Launch Complex ID  \\\n",
+       "0         Retired       Failure              Day     LC-18A   \n",
+       "1         Retired       Success            Night     LC-26A   \n",
+       "2         Retired       Failure              Day     LC-18A   \n",
+       "3         Retired       Failure            Night     LC-26A   \n",
+       "4         Retired       Success              Day     LC-18A   \n",
+       "...           ...           ...              ...        ...   \n",
+       "4625       Active       Success              Day      ELV-1   \n",
+       "4626       Active       Success            Night       LC-9   \n",
+       "4627       Active       Success              Day     LC-101   \n",
+       "4628       Active       Success            Night              \n",
+       "4629       Active       Success              Day       LC-3   \n",
+       "\n",
+       "                              Launch Site Territory Country  \n",
+       "0                      Cape Canaveral AFS   Florida     USA  \n",
+       "1                      Cape Canaveral AFS   Florida     USA  \n",
+       "2                      Cape Canaveral AFS   Florida     USA  \n",
+       "3                      Cape Canaveral AFS   Florida     USA  \n",
+       "4                      Cape Canaveral AFS   Florida     USA  \n",
+       "...                                   ...       ...     ...  \n",
+       "4625  Guiana Space Centre - French Guiana       NaN  France  \n",
+       "4626      Taiyuan Satellite Launch Center       NaN   China  \n",
+       "4627     Wenchang Satellite Launch Center       NaN   China  \n",
+       "4628      Jiuquan Satellite Launch Center       NaN   China  \n",
+       "4629      Xichang Satellite Launch Center       NaN   China  \n",
+       "\n",
+       "[4630 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Merging the DataFrames for cleaned_US_df and cleaned_world_df\n",
+    "# Columns in common to merge on\n",
+    "common_columns = ['Company', 'Date', 'Time', 'Rocket', 'Mission', 'RocketStatus', 'MissionStatus', 'Day/Night Launch', 'Complex ID', 'Launch Site', 'Country']\n",
+    "\n",
+    "# Merge the dataframes based on the common columns\n",
+    "merged_df = cleaned_US_df.merge(cleaned_world_df, on=common_columns, how='outer')\n",
+    "\n",
+    "# Show merged dataframe\n",
+    "merged_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c9d51b33",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save the merged DataFrame into a CSV file to use in our question analysis\n",
+    "merged_df.to_csv('Resources/SpaceMission_Merged.csv', index=False)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9d51b33",
+   "id": "4b207725-9e20-4736-ad6c-eff424e769dd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1054,7 +1457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
