--- a/Missions_Over_Time.ipynb
+++ b/Missions_Over_Time.ipynb
@@ -13,8 +13,13 @@
    "id": "8d9f0d4c-a5c6-4779-9c4e-553c18191586",
    "metadata": {},
    "source": [
-    "## Anwering the question: How has the total number of Space Missions changed over time?\n",
-    "### -- Analysis--"
+    "## Anwering the question: How has the total number of Space Missions changed over time? (1957-2022)\n",
+    "### Sections:\n",
+    "- Total Space Missions Over Time - Worldwide\n",
+    "- Total Space Missions Over Time - USA only\n",
+    "- Total Space Missions Over Time - Top 3 Countries\n",
+    "- Could NASA's budget since it's birth, be affecting the number of Space Missions Over Time for the US?\n",
+    "- Space Race Timeline and other Historical Events during this Time Period"
    ]
   },
   {
@@ -2475,67 +2480,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a1f20c6-d3af-40f0-9b9b-63cf6fc8a353",
-   "metadata": {},
-   "source": [
-    "Space Race Timeline\n",
-    "-\n",
-    "\n",
-    "--1947: Start of the Cold War\n",
-    "\n",
-    "* 1957: (October 4th) USSR launches 'Sputnik', their first artificial satellite, which orbited the earth. (November 3rd) Soviet Union launches 'Sputnik2'.\n",
-    "This action was the starting point for the so called \"Space Race\" during the cold war, pressuring the US to also launch their own satellite into space.\n",
-    "* 1957: (December 6th) United states launches their own satellite 'Vanguard', which failed.\n",
-    "* 1958: The signing of the Space Act marked the birth of NASA.\n",
-    "* 1959: Both USA and USSR successfully launching moon flyby missions. However, USSR led the race\n",
-    "with their satelite Luna 2(September), being the first spacecraft to reach the moon's surface.\n",
-    "\n",
-    "1961-1964: NASA's budget was increased 500%\n",
-    "* 1961: (April 12th) Yuri Gagarin becomes first human in space in a USSR mission. \n",
-    "(May 25th) JFK promises that USA would land a man on the moon, and safely bring him back, before the decade was over. This promise and it's vision, kickstarted project APOLLO.\n",
-    "During this time, the USA and the Soviet Union were at the height of the cold war. A major front in this war, was space. Therefore, putting a man on the moon would mean victory for the successful party.\n",
-    "(August 6th) USSR Long Duration Space Flightt\n",
-    "* 1963: (September) JFK wants to join forces with the USSR on project APOLLO. \n",
-    "(November) Death of JFK.\n",
-    "* 1964: (October 12th) USSR's first multi-person crew\n",
-    "* 1965: (March 18th) USSR's first Spacewalk\n",
-    "* 1966: (February 3rd) USSR's first soft landing of satellite 'Luna9' on the moon, no humans yet\n",
-    "* 1967: Apollo 1's accident.\n",
-    "* 1969: (July 20th) \"One small step for man, one giant leap for mankind.\" First man on the moon. Mission led by the USA, with 'Apollo 11'.\n",
-    "\n",
-    "1970's\n",
-    "* 1970-197\n",
-    "* 1972: (December) USA's last crewed moon landing with 'Apollo 17'.\n",
-    "* 1973: Political risks prevent USA from sending more astronauts to the moon. Time,costs, and safety were a big factor.\n",
-    "\n",
-    "--1991: End of the Cold War\n",
-    "\n",
-    "* 2000: Blue Origin is founded by Jeff Bezos, founder of Amazon\n",
-    "* 2002: SpaceX company by Elon Musk is founded.\n",
-    "* 2012: Blue Origin flight testing 'New Shepard' rocket\n",
-    "\n",
-    "Resources: \n",
-    "Space Race Timeline obtained from: https://www.history.com/topics/cold-war/space-race\n",
-    "Astronauts explain why there hasn't been a human on the moon after 1972: https://www.businessinsider.com/moon-missions-why-astronauts-have-not-returned-2018-7?utm_source=copy-link&utm_medium=referral&utm_content=topbar\n",
-    "\n",
-    "Blue Origin information obtained from: \n",
-    "https://www.blueorigin.com/about-blue\n",
-    "https://en.wikipedia.org/wiki/Blue_Origin\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "24213018-3009-42fb-9dd0-d941d6cea503",
-   "metadata": {},
-   "source": [
-    "Fun Fact:\n",
-    "NASA's project Artemis, started during 2012, and promises that as early as 2025, there will be another moon landing mission with a diverse crew of astronauts.\n",
-    "\n",
-    "There are factors that can contribute to lesser moon landings that involve humans in those missions. Aside of political and economical factors, the dangers that the lunar surface imposes to the astronauts could be a big reason why there are lesser missions of that sort. Dust factors, extream heat and freezing cold temperatures that make the lunar surface inhabitable, solar radiation, amongst other factors.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "3ff80c69-3124-46fb-b255-d8b776bf15b0",
    "metadata": {},
    "source": [
@@ -3710,9 +3654,130 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4a1f20c6-d3af-40f0-9b9b-63cf6fc8a353",
+   "metadata": {},
+   "source": [
+    "Space Race Timeline and Historical Events during this time period\n",
+    "-\n",
+    "\n",
+    "--1947: Start of the Cold War\r\n",
+    "--1955: Start of Vietnam War\r\n",
+    "\r\n",
+    "* 1957: (October 4th) USSR launches 'Sputnik', their first artificial satellite, which orbited the earth. (November 3rd) Soviet Union launched 'Sputnik2'.\r\n",
+    "This action was the starting point for the so-called \"Space Race\" during the cold war, pressuring the US to also launch their own satellite into space.\r\n",
+    "* 1957: (December 6th) United states launches their own satellite 'Vanguard', which failed.\r\n",
+    "* 1958: The signing of the Space Act marked the birth of NASA.\r\n",
+    "* 1959: Both the USA and USSR successfully launch moon flyby missions. However, USSR led the race\r\n",
+    "with their satellite Luna 2(September), being the first spacecraft to reach the moon's surface.\r\n",
+    "\r\n",
+    "1961-1964: NASA's budget was increased 500%\r\n",
+    "* 1961: (April 12th) Yuri Gagarin becomes first human in space in a USSR mission. \r\n",
+    "(May 25th) JFK promised that the USA would land a man on the moon, and safely bring him back, before the decade was over. This promise and its vision, kickstarter project APOLLO.\r\n",
+    "During this time, the USA and the Soviet Union were at the height of the cold war. A major front in this war was space. Therefore, putting a man on the moon would mean victory for the successful party.\r\n",
+    "(August 6th) USSR Long Duration Space Flight\r\n",
+    "* 1963: (September) JFK wants to join forces with the USSR on project APOLLO. \r\n",
+    "(November) Death of JFK.\r\n",
+    "* 1964: (October 12th) USSR's first multi-person crew\r\n",
+    "* 1965: (March 18th) USSR's first Spacewalk\r\n",
+    "* 1966: (February 3rd) USSR's first soft landing of satellite 'Luna9' on the moon, no humans yet\r\n",
+    "* 1967: Apollo 1's accident.\r\n",
+    "* 1969: (July 20th) \"One small step for man, one giant leap for mankind.\" First man on the moon. Mission led by the USA, with 'Apollo 11'.\r\n",
+    "\r\n",
+    "1970's\r\n",
+    "* 1970-197\r\n",
+    "* 1972: (December) USA's last crewed moon landing with 'Apollo 17'.\r\n",
+    "* 1973: Political risks prevent the USA from sending more astronauts to the moon. Time,costs, and safety were a big factor.\r\n",
+    "* 1973: Richard Nixon is sworn into office. ‘Skylab’, the first space station is launched.\r\n",
+    "* 1974: Aftermath of 1973 oil crisis and resignation of President Nixon. ‘Skylab’ returns to Earth.\r\n",
+    "--1975: End of Vietnam War\r\n",
+    "* 1976: Viking 1, first American space probe ever to successfully land on Mars\r\n",
+    "* 1977: Jimmy Carter is sworn into office. The Voyager program starts with the launch of the 'Voyager 2' spacecraft, with the goal to study the outer planets.\r\n",
+    "* 1978: Kosmos 954, a Soviet satellite, burns up in Earth's atmosphere, scattering radioactive debris over Canada. Navstar 1, first global positioning satellite, by the USA. Soviet Union launches Russification campaign (non-Russians giving up their culture in favor of Russian culture and language)\r\n",
+    "* 1979: Pluto moves inside Neptune's orbit. Soviet oil tanker's largest oil spill in Baltic Sea. USA’s Skylab begins falling back to Earth, after 6 years in orbit. USA's Pioneer 11, first spacecraft visiting planet Saturn. Soviet Union's invasion of Afghanistan. This would later contribute to the collapse of the USSR in 1991.\r\n",
+    "\r\n",
+    "1980’s\r\n",
+    "* 1980: Winter Olympic Games held in NYC.\r\n",
+    "* 1981: Ronald Reagan takes office.  The launch of the first reusable US spacecraft flown into orbit, the ‘Space Shuttle’. Largest US tax cut in history at the time was passed.\r\n",
+    "* 1982: Highest unemployment rate since 40's in the US.\r\n",
+    "* 1983: The Strategic Defense Initiative Program was made by President Ronald Reagan. Sally Ride, becomes the first American woman traveling to space.\r\n",
+    "* 1984: First astronaut to fly free of an orbiting spacecraft. US Olympic Games held in LA. President Ronald Reagan wins the reelection.\r\n",
+    "* 1985: First meeting between leaders of the USSR and the US, held in six years (Geneva, Switzerland).\r\n",
+    "* 1986: The 'Challenger Space Shuttle' tragedy. USSR and US tentatively agree on a medium-range missile ban.\r\n",
+    "* 1987: 'Black Monday' stock market crash occurs. The USSR and the US sign the Intermediate Range Nuclear Forces Treaty.\r\n",
+    "* 1988:\r\n",
+    "* 1989: President George Herbert Walker Bush takes office. Largest oil spill in American history at that time. Fall of the Berlin Wall.\r\n",
+    "\r\n",
+    "1990’s\r\n",
+    "* 1990: The US places the Hubble Telescope into orbit. The US and USSR signed a treaty that would eliminate the production of chemical weapons. The US gets involved in what is known as the Gulf War. \r\n",
+    "--1991: End of the Cold War. \r\n",
+    "* 1991: Beginning of USA's operation Desert Storm. Gulf War ends. Dissolution of the Soviet Union. Russia becomes a newly independent state.\r\n",
+    "* 1992: \r\n",
+    "* 1993: President Bill Clinton takes office. \r\n",
+    "* 1994: \r\n",
+    "* 1995: Russian space station Mir receives the US Space Shuttle Atlantis for the first time.\r\n",
+    "* 1996: Atlanta, Georgia, kickstarts the opening of the Summer Olympic Games. President Bill Clinton wins reelection. \r\n",
+    "* 1997: \r\n",
+    "* 1998: John Glenn becomes the oldest astronaut in space, after being the first American astronaut orbiting our planet.\r\n",
+    "* 1999: \r\n",
+    "\r\n",
+    "2000’s\r\n",
+    "* 2000: Blue Origin is founded by Jeff Bezos, founder of Amazon. The US participates less in world events.\r\n",
+    "* 2001: President George W. Bush is confirmed as President of the US. World Trade Center terrorist attacks(9/11). This would trigger the War on Terrorism.\r\n",
+    "* 2002: The SpaceX company was founded by Elon Musk. The Winter Olympic Games opened in Salt Lake City. Utah.\r\n",
+    "2003: Space Shuttle Columbia's tragedy. The beginning of the War in Iraq.\r\n",
+    "2004: NASA's MER-B rover, confirms that there was once water on Mars' surface.\r\n",
+    "2005: President Goerge W. Bush continues in office after winning reelection. Hurricane Katrina's disaster. \r\n",
+    "2008: The Great Recession of the United States.\r\n",
+    "2009: President Barack Obama takes office. Swine Flu Global Pandemic. Economic recession continues in the US. The war in Afghanistan comes into focus, once again. \r\n",
+    "\r\n",
+    "2010’s \r\n",
+    "* 2012: Blue Origin flight testing 'New Shepard' rocket. Vladimir Putin becomes President of Russia.\r\n",
+    "* 2015: SpaceX's first successful vertical soft landing of rocket 'Falcon 9'.\r\n",
+    "* 2017: Second flight of SpaceX’s ‘Falcon 9’. President Donald Trump gets into office.\r\n",
+    "* 2019: First cases of COVID-19 erupt in China.\r\n",
+    "* 2020: First cases of COVID-19 appear in the US.\r\n",
+    "* 2021: President Joe Biden’s term starts for the US office. \r\n",
+    "\r\n",
+    "\r\n",
+    "Resources: \r\n",
+    "Space Race Timeline obtained from: https://www.history.com/topics/cold-war/space-race\r\n",
+    "Astronauts explain why there hasn't been a human on the moon after 1972: https://www.businessinsider.com/moon-missions-why-astronauts-have-not-returned-2018-7?utm_source=copy-link&utm_medium=referral&utm_content=topbar\r\n",
+    "\r\n",
+    "To see major events from 1970-1980, just replace the last year value with the year to research:\r\n",
+    "https://en.wikipedia.org/wiki/1980 \r\n",
+    "\r\n",
+    "Information on Russia and Kazakhstan’s Space Missions: https://spacewatch.global/2018/04/kazakhstans-space-ambitions-hostage-russian-space-launchers-baikonur/ \r\n",
+    "\r\n",
+    "Resources on Kazakhstan, and the first missions to outer space: \r\n",
+    "https://www.esa.int/Science_Exploration/Human_and_Robotic_Exploration/Mission_Odissea_-_F._De_Winne_-_english/Baikonur_from_the_steppes_of_Kazakhstan_to_space \r\n",
+    "\r\n",
+    "Space Program of Kazakhstan: https://en.wikipedia.org/wiki/Category:Space_program_of_Kazakhstan \r\n",
+    "\r\n",
+    "https://americasbesthistory.com/abhtimeline1980.html \r\n",
+    "\r\n",
+    "Blue Origin information obtained from: \r\n",
+    "https://www.blueorigin.com/about-blue \r\n",
+    "https://en.wikipedia.org/wiki/Blue_Origin \r\n",
+    "\r\n",
+    "\r\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a5a77f3-9771-4e5b-bae0-72739a44e0ca",
+   "metadata": {},
+   "source": [
+    "Fun Fact:\n",
+    "NASA's project Artemis, started during 2012, and promises that as early as 2025, there will be another moon landing mission with a diverse crew of astronauts.\n",
+    "\n",
+    "There are factors that can contribute to lesser moon landings that involve humans in those missions. Aside of political and economical factors, the dangers that the lunar surface imposes to the astronauts could be a big reason why there are lesser missions of that sort. Dust factors, extream heat and freezing cold temperatures that make the lunar surface inhabitable, solar radiation, amongst other factors.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d2cd1f4-a0a5-4768-900a-1787f97c6a4a",
+   "id": "711e4edf-1561-42bf-9109-2d2c23c5f7df",
    "metadata": {},
    "outputs": [],
    "source": []
