--- a/Missions_Over_Time.ipynb
+++ b/Missions_Over_Time.ipynb
@@ -3682,7 +3682,7 @@
     "* 1965: (March 18th) USSR's first Spacewalk\r\n",
     "* 1966: (February 3rd) USSR's first soft landing of satellite 'Luna9' on the moon, no humans yet\r\n",
     "* 1967: Apollo 1's accident.\r\n",
-    "* 1969: (July 20th) \"One small step for man, one giant leap for mankind.\" First man on the moon. Mission led by the USA, with 'Apollo 11'.\r\n",
+    "* 1969: (July 20th) \"One small step for man, one giant leap for mankind.\" First man on the moon. Mission led by the USA, with'.\r\n",
     "\r\n",
     "1970's\r\n",
     "* 1970-197\r\n",
