Typo in the commented section of two graphs.

--- a/Missions_Over_Time.ipynb
+++ b/Missions_Over_Time.ipynb
@@ -1536,7 +1536,7 @@
     "plt.ylabel('Number of Space Missions')\n",
     "plt.grid(True)\n",
     "\n",
-    "# Count the total number of missions for the USA\n",
+    "# Count the total number of missions worldwide\n",
     "total_missions_worldwide = len(missions_df)\n",
     "print(f'Total number of Space Missions Worldwide (1957-2022): {total_missions_worldwide}')\n",
     "\n",
@@ -2169,7 +2169,7 @@
     "plt.ylabel('Number of Space Missions')\n",
     "plt.grid(True)\n",
     "\n",
-    "# Count the total number of missions for the USA\n",
+    "# Count the total number of missions for the rest of the world\n",
     "total_missions_rotw = len(rotw_missions)\n",
     "print(f'Total number of Space Missions Worldwide excluding USA (1957-2022): {total_missions_rotw}')\n",
     "\n",
@@ -3685,6 +3685,7 @@
     "* 1969: (July 20th) \"One small step for man, one giant leap for mankind.\" First man on the moon. Mission led by the USA, with'.\r\n",
     "\r\n",
     "1970's\r\n",
+    "* 1970-197\r\n",
     "* 1972: (December) USA's last crewed moon landing with 'Apollo 17'.\r\n",
     "* 1973: Political risks prevent the USA from sending more astronauts to the moon. Time,costs, and safety were a big factor.\r\n",
     "* 1973: Richard Nixon is sworn into office. ‘Skylab’, the first space station is launched.\r\n",
